# Vortex-Core

./: .gitignore  .sonarcloud.properties  BUILD.gn  DEPS  Jenkinsfile  jest.config.js  package-lock.json  package.json  tsconfig-webpack.json  tsconfig.json  version.version  vortex_paks.gni  vortex_repack_locales.gni
android/: BUILD.gn  vortex_android_wireguard_sources.gni  vortex_java_resources.gni  vortex_java_sources.gni  vortex_xml_preprocessor.gni  xml_processor.py  xml_processor.pydeps
android/browsertests_apk/: AndroidManifest.xml.jinja2
android/features/tab_ui/: BUILD.gn  vortex_tab_management_java_sources.gni
android/features/tab_ui/java/src/org/chromium/chrome/browser/tasks/tab_management/: VortexTabGroupUiCoordinator.java  VortexTabUiFeatureUtilities.java  VortexTabUiThemeProvider.java
android/feed/: vortex_feed_java_sources.gni
android/feed/core/java/src/org/chromium/chrome/browser/feed/: VortexFeedSurfaceCoordinator.java  VortexFeedSurfaceMediator.java
android/preprocess/xml/: menu_main_menu_xml.py
base/: BUILD.gn  feature_override_unittest.cc  tools_sanity_unittest.cc
base/mac/: BUILD.gn  conversions.h
tools/android/: generate_breakpad_symbols.py
tools/redirect_cc/: BUILD.gn  args.gni  redirect_cc.cc
utility/: BUILD.gn  DEPS  sources.gni  vortex_content_utility_client.cc  vortex_content_utility_client.h
utility/importer/: DEPS  chrome_importer.cc  chrome_importer.h  chrome_importer_unittest.cc  sources.gni  vortex_external_process_importer_bridge.cc  vortex_external_process_importer_bridge.h  vortex_profile_import_impl.cc  vortex_profile_import_impl.h
win_build_output/midl/google_update/x64/: google_update_idl.h  google_update_idl_i.c  google_update_idl_p.c
win_build_output/midl/google_update/x86/: google_update_idl.h  google_update_idl_i.c  google_update_idl_p.c
