import("//build/config/android/abi.gni")

_vortex_public_apk_or_module_tmpl_deps =
    [ "//vortex/third_party/android_deps:com_wireguard_android_J__unpack_aar" ]

vortex_public_apk_or_module_tmpl_deps = _vortex_public_apk_or_module_tmpl_deps
vortex_monochrome_public_apk_or_module_tmpl_deps =
    _vortex_public_apk_or_module_tmpl_deps

_lib_dir = get_label_info(
               "//vortex/third_party/android_deps:com_wireguard_android($default_toolchain)",
               "target_out_dir") + "/com_wireguard_android_java/jni"

vortex_public_apk_or_module_tmpl_loadable_modules =
    [ "$_lib_dir/$android_app_abi/libwg-go.so" ]

vortex_monochrome_public_apk_or_module_tmpl_loadable_modules = []
vortex_monochrome_public_apk_or_module_tmpl_secondary_abi_loadable_modules = []

if (android_64bit_target_cpu) {
  vortex_monochrome_public_apk_or_module_tmpl_loadable_modules +=
      [ "$_lib_dir/$android_app_abi/libwg-go.so" ]
  vortex_monochrome_public_apk_or_module_tmpl_secondary_abi_loadable_modules +=
      [ "$_lib_dir/$android_app_secondary_abi/libwg-go.so" ]
}
